# ponderada-ingestao-dados

./: README.md  app.py  docker-compose.yml  downloaded_raw_data_20240825151430.parquet  downloaded_raw_data_20240825151433.parquet  downloaded_raw_data_20240825151445.parquet  get_api.py  pyproject.toml  raw_data_20240825151437.parquet  raw_data_20240825164748.parquet
data_pipeline/: data_processing.py
raw data parquet/: downloaded_raw_data_20240825151432.parquet  downloaded_raw_data_20240825151447.parquet  raw_data_20240825151435.parquet  raw_data_20240825151439.parquet  raw_data_20240825151441.parquet  raw_data_20240825151443.parquet
sql/: create_table.sql
tests/: test_clickhouse_client.py  test_data_processing.py  test_minio_client.py
