[tool.poetry]
name = "ponderada"
version = "0.1.0"
description = ""
authors = ["sofipimazzoni <83848719+sofipimazzoni@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
minio = "^7.2.8"
clickhouse-connect = "^0.7.19"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
moto = "^5.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
